--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ li {
   font-weight: 500;
 }
 
+a {
+  color: #1e1e1e;
+}
+
 button {
   height: 56px;
   border-radius: 16px;
@@ -141,8 +145,8 @@ footer {
 }
 
 .hero-info-image {
-  height: 594px;
-  width: 542px;
+  height: 672px;
+  width: 442px;
   border-radius: 40px;
   border-color: #219653;
   border-width: 4px;
@@ -340,6 +344,7 @@ footer {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  margin-bottom: 16px;
 }
 
 .section-contact-item-icon {
