--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  width: 100vw;
+  width: 100%;
   height: 90vh;
 }
 
@@ -145,8 +145,8 @@ footer {
 }
 
 .hero-info-image {
-  height: 672px;
-  width: 442px;
+  height: 100%;
+  width: 402px;
   border-radius: 40px;
   border-color: #219653;
   border-width: 4px;
@@ -368,4 +368,43 @@ footer {
   align-items: center;
   justify-content: space-between;
   width: 40%;
+}
+
+@media only screen and (max-device-width: 450px) {
+  .content-container {
+    width: 96vw;
+    max-width: 96vw;
+  }
+
+  .barra-navegacao {
+    width: 100%;
+  }
+
+  .hero-info {
+    width: 100%;
+  }
+
+  .hero-info-image {
+    width: 202px;
+  }
+
+  .ability-cards-container {
+    row-gap: 36px;
+    grid-template-columns: auto;
+    margin-top: 12px;
+  }
+
+  .section-portfolio-grid {
+    row-gap: 36px;
+    grid-template-columns: auto;
+    margin-top: 24px;
+  }
+
+  .section-experiences-card {
+    width: 90%;
+  }
+
+  .footer-content {
+    width: 96%;
+  }
 }
