--- a/mobile.css
+++ b/mobile.css
@@ -3,6 +3,22 @@
     text-align: center;
   }
 
+  h2 {
+    line-height: 68px;
+    font-size: 64px;
+  }
+
+  h5 {
+    font-size: 36px;
+  }
+
+  p.card {
+    font-size: 24px;
+    margin-top: 12px;
+    text-align: center;
+    max-width: 70%;
+  }
+
   button {
     height: 80px;
     font-size: 24px;
@@ -11,8 +27,8 @@
   }
 
   .content-container {
-    width: 96vw;
-    max-width: 96vw;
+    width: 94vw;
+    max-width: 94vw;
   }
 
   .barra-navegacao {
@@ -59,7 +75,7 @@
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
-    margin-top: 140px;
+    margin-top: 156px;
   }
 
   .hero-info-image {
@@ -67,15 +83,46 @@
   }
 
   .ability-cards-container {
-    row-gap: 36px;
-    grid-template-columns: auto;
-    margin-top: 12px;
+    row-gap: 55px;
+    justify-content: space-between;
+    grid-template-columns: auto auto;
+    margin-top: 44px;
+    width: 100%;
+  }
+
+  .ability-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 44vw;
+    height: auto;
+    padding-top: 16px;
   }
 
   .section-portfolio-grid {
     row-gap: 36px;
-    grid-template-columns: auto;
-    margin-top: 24px;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    margin-top: 40px;
+  }
+
+  .section-portfolio-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 46vw;
+    height: auto;
+    padding: 24px 0px;
+  }
+
+  .section-portfolio-card-links {
+    width: 40%;
+  }
+
+  .section-portfolio-card-icon-image {
+    width: 40px;
+    height: auto;
   }
 
   .section-experiences-card {
@@ -94,5 +141,12 @@
   .hero-info-icons-container {
     margin-top: 40px;
     width: 60%;
+  }
+
+  .section-abilities {
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+    margin-top: 30vw;
   }
 }
