--- a/mobile.css
+++ b/mobile.css
@@ -12,11 +12,19 @@
     font-size: 36px;
   }
 
+  p {
+    font-size: 24px;
+  }
+
   p.card {
     font-size: 24px;
     margin-top: 12px;
     text-align: center;
     max-width: 70%;
+  }
+
+  a {
+    font-size: 28px;
   }
 
   button {
@@ -125,12 +133,39 @@
     height: auto;
   }
 
+  .section-experiences {
+    padding-top: 60px;
+    padding-bottom: 20px;
+  }
+
   .section-experiences-card {
     width: 90%;
+    margin-top: 40px;
+  }
+
+  .section-experiences-card-img {
+    width: 64px;
+    height: 64px;
+  }
+
+  .section-experiences-card-title {
+    font-size: 28px;
+  }
+
+  .section-experiences-card-subtitle {
+    font-size: 22px;
+  }
+
+  .section-experiences-card-text {
+    font-size: 16px;
+  }
+
+  .section.contact {
+    padding-bottom: 60px;
   }
 
   .footer-content {
-    width: 96%;
+    width: 94vw;
   }
 
   .hero-info-icons-img {
