--- a/style.css
+++ b/style.css
@@ -3,27 +3,32 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: #fefefe;
+  background-color: #4f4f4f;
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
 }
 
+p {
+  color: #fefefe;
+}
+
 h1 {
   font-family: "Montserrat", sans-serif;
+  color: #fefefe;
 }
 
 h2 {
   font-family: "Montserrat", sans-serif;
   line-height: 58px;
   font-size: 56px;
-  color: #1e1e1e;
+  color: #fefefe;
   margin: 0px;
   padding: 0px;
 }
 
 h2.verde {
-  color: #219653;
+  color: #32cd32;
 }
 
 h5 {
@@ -31,22 +36,28 @@ h5 {
   font-weight: bold;
   font-size: 24px;
   margin: 0px;
+  color: #fefefe;
+}
+
+h6 {
+  color: #fefefe;
 }
 
 li {
   font-size: 20px;
   margin-bottom: 12px;
   font-weight: 500;
+  color: #fefefe;
 }
 
 a {
-  color: #1e1e1e;
+  color: #fefefe;
 }
 
 button {
   height: 56px;
   border-radius: 16px;
-  background-color: #219653;
+  background-color: #32cd32;
   border-width: 0px;
   color: #fefefe;
   font-size: 16px;
@@ -68,7 +79,7 @@ footer {
   display: flex;
   width: 100vw;
   height: 156px;
-  background-color: #d9d9d9;
+  background-color: #a9a9a9;
   align-items: center;
   justify-content: center;
 }
@@ -107,14 +118,14 @@ footer {
 }
 
 .titulo-navegacao {
-  color: #1e1e1e;
+  color: #fefefe;
   font-size: 24px;
   letter-spacing: -0.015rem;
   font-weight: bold;
 }
 
 .links-navegacao {
-  color: #1e1e1e;
+  color: #fefefe;
   font-size: 16px;
   letter-spacing: -0.015rem;
   margin-right: 16px;
@@ -148,7 +159,7 @@ footer {
   height: 100%;
   width: 402px;
   border-radius: 40px;
-  border-color: #219653;
+  border-color: #32cd32;
   border-width: 4px;
   border-style: solid;
 }
@@ -156,15 +167,16 @@ footer {
 .hero-info-icons-container {
   display: flex;
   flex-direction: row;
-  width: 50%;
+  width: 18%;
   align-items: center;
   justify-content: space-between;
-  margin-top: 24px;
+  margin-top: 18px;
+  margin-left: 12px;
 }
 
 .hero-info-icons-img {
-  width: 36px;
-  height: 36px;
+  width: 48px;
+  height: 48px;
   cursor: pointer;
 }
 
@@ -209,7 +221,7 @@ footer {
   width: 80px;
   height: 80px;
   border-radius: 40px;
-  background-color: #219653;
+  background-color: #32cd32;
   margin-bottom: 12px;
 }
 
@@ -255,7 +267,7 @@ footer {
 }
 
 .section-portfolio-img {
-  width: 220px;
+  width: 156px;
   height: 156px;
   margin-bottom: 12px;
 }
@@ -263,7 +275,7 @@ footer {
 .section-portfolio-card-links {
   display: flex;
   flex-direction: row;
-  width: 60%;
+  width: 40%;
   align-items: baseline;
   justify-content: space-between;
 }
@@ -289,7 +301,7 @@ footer {
   align-items: flex-start;
   justify-content: flex-start;
   width: 800px;
-  background-color: #d9d9d9;
+  background-color: #a9a9a9;
   border-radius: 16px;
   margin-top: 24px;
   padding: 24px;
@@ -367,5 +379,5 @@ footer {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 40%;
+  width: 10%;
 }
